--- a/wafBypass/xss/test.html
+++ b/wafBypass/xss/test.html
@@ -20,4 +20,9 @@
     <iframe src=http://127.0.0.1:80 < 
 
 -->
+<!-- Not Work 
+<STYLE>.classname{background-image:url("javascript:prompt()");}</STYLE> -->
+
+<!-- Not Work
+    <img/src=1/onerror=alert(0)> -->
 
