--- a/Encoding Obfuscate/multEncodeEscape.html
+++ b/Encoding Obfuscate/multEncodeEscape.html
@@ -1,10 +1,10 @@
 <!-- <a href="javascript:\alert(1)">meow</a> -->
 
-<!-- a -> Unicode -->
+<!-- a -> Unicode Work  -->
 <!-- <a href="javascript:\u0061lert(1)">meow</a> -->
 
 <!-- \ -> HTML encode  Work-->
-<a href="javascript:&#x5c;u0061lert(1)">meow</a>
+<!-- <a href="javascript:&#x5c;u0061lert`1`">meow</a> -->
 
 
 <!-- 
