--- a/XSS/RememberPwsTest2.html
+++ b/XSS/RememberPwsTest2.html
@@ -1,4 +1,4 @@
-<!-- work -->
+<!-- work Store XSS-->
 <input id="username" type="text" name="username">
 <input type="password" name="password" onchange="passwordExistis(username.value,this.value)">
 <p id="victimUserName"></p>
